Move snapshot profiling configuration code into SnapshotProfilingConfiguration.